--- a/script/templates/index.html
+++ b/script/templates/index.html
@@ -2,85 +2,50 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Global Innovation Map - Statistics</title>
-    <meta name="author" content="Xuan Chen; xc4n16@soton.ac.uk">
-    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.38.0/mapbox-gl.css' rel='stylesheet'/>
-    <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto+Condensed" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-pink.min.css">
-    <link rel="stylesheet" href="/static/css/style.css">
+    <title>绿动北京足球俱乐部</title>
+    <meta name="author" content="cx9">
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <![endif]-->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script src="https://code.highcharts.com/maps/highmaps.js"></script>
-    <script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
-    <script src="https://code.highcharts.com/mapdata/custom/world.js"></script>
-    <script src="https://www.amcharts.com/lib/3/amcharts.js"></script>
-    <script src="https://www.amcharts.com/lib/3/serial.js"></script>
-    <script src="https://www.amcharts.com/lib/3/plugins/export/export.min.js"></script>
-    <link rel="stylesheet" href="https://www.amcharts.com/lib/3/plugins/export/export.css" type="text/css" media="all" />
-    <script src="https://www.amcharts.com/lib/3/themes/light.js"></script>
-
-    <script src="{{ url_for('static',filename='js/app.js') }}"></script>
+</head>
 </head>
 <body>
 
-<div id="container"></div>
+<main>
 
-<div class="map-overlay top">
-    <div class="map-overlay-inner">
-        <h2>Global Innovation Map</h2>
-        <h4><a href="#"><span><img src="/static/img/statistics.png" height="24" width="24"/></span>Statistics</a></h4>
-        <h4><a href="/activity"><span><img src="/static/img/activities.png" height="24" width="24"/></span>Activities</a></h4>
-        <div class="time">
-            <select id="year"></select>
-            <select id="cate">
-                <option id="cate_num" value="num">number</option>
-                <option id="cate_amount" value="amount">amount</option>
-            </select>
-            <button type="button" id="switch">switch</button>
-        </div>
-    </div>
-</div>
-<div id="chartpopup">
-    <p class="charttitle">
-        <a id="close" href="javascript:void(0);">Return To Map</a>
-        Historical <span id="titleCate"></span> Data Of <span id="titleCountry"></span>
-    </p>
-    <div id="chartdiv"></div>
-</div>
+    <section>
+        <h3>get user</h3>
+        <input type="text" id="uName"/>
+        <input type="submit" id="uSubmit"/>
+
+        <article id="detail">
+
+        </article>
+    </section>
+
+</main>
 
 <script language="JavaScript" type="application/javascript">
-
-//set time selection
-var yearSelect = document.getElementById('year');
-var cateSelect = document.getElementById('cate');
-var iniYear = 2015;
-var iyear = 2000;
-var switchB = document.getElementById('switch');
-var chartPopup = document.getElementById('chartpopup');
-var chartClose = document.getElementById('close');
-var titleCountry = document.getElementById('titleCountry');
-var titleCate = document.getElementById('titleCate');
-
-for (iyear; iyear < 2016; iyear++){
-    var opt = document.createElement('option');
-    opt.id = 'year' + iyear;
-    opt.value = opt.text = iyear;
-    yearSelect.appendChild(opt);
-}
-document.getElementById('year'+iniYear).setAttribute('selected',true);
-
-//bind chart close
-chartClose.addEventListener("click", function (e) {
-    chartPopup.style.display = 'none';
-});
-
-//initially render map
-renderMap(iniYear, 'num');
-
-switchB.addEventListener('click', function (e) {
-        chartPopup.style.display = 'none';
-        renderMap(yearSelect.value, cateSelect.value);
+    $('#uSubmit').click(function () {
+        get_user($('#uName').val());
     });
+
+//get a user details
+function get_user(name) {
+	$.ajax({
+        url: "/api/get_user_by_name?n=" + name,
+        type: "GET",
+        dataType: "json",
+        success: function (data) {
+            $('#detail').html(JSON.stringify(data));
+        },
+        error: function (response, status, error) {
+            console.log('Error: ' + error + ". Status: " + status);
+        },
+        async: false
+	});
+}
 
 </script>
 </body>
