--- a/script/templates/index.html
+++ b/script/templates/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <title>绿动北京足球俱乐部</title>
     <meta name="author" content="cx9">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <![endif]-->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <link rel="stylesheet" href="/static/css/index.css">
 </head>
 </head>
 <body>
@@ -19,9 +21,8 @@
         <input type="text" id="uName"/>
         <input type="submit" id="uSubmit"/>
 
-        <article id="detail">
-
-        </article>
+        <article id="detail"></article>
+        <article id="feeList"></article>
     </section>
 
 </main>
@@ -29,6 +30,7 @@
 <script language="JavaScript" type="application/javascript">
     $('#uSubmit').click(function () {
         get_user($('#uName').val());
+        get_feeList($('#uName').val());
     });
 
 //get a user details
@@ -39,6 +41,32 @@ function get_user(name) {
         dataType: "json",
         success: function (data) {
             $('#detail').html(JSON.stringify(data));
+        },
+        error: function (response, status, error) {
+            console.log('Error: ' + error + ". Status: " + status);
+        },
+        async: false
+	});
+}
+
+
+function get_feeList(name) {
+	$.ajax({
+        url: "/api/get_feeList_by_name?n=" + name,
+        type: "GET",
+        dataType: "json",
+        success: function (data) {
+            var rowStr = '<table>';
+            for (var i=0; i < data.length; i++){
+                var row = data[i];
+                var user = row.user;
+                var date = row.date;
+                var loc = row.loc;
+                var amount = row.amount;
+                rowStr = rowStr + '<tr><td>' + user + '</td><td>' + date + '</td><td>' + loc + '</td><td>' + amount + '</td></tr>';
+            }
+            rowStr = rowStr + '</table>'
+            $('#feeList').html(rowStr);
         },
         error: function (response, status, error) {
             console.log('Error: ' + error + ". Status: " + status);
