--- a/script/templates/index.html
+++ b/script/templates/index.html
@@ -26,13 +26,13 @@
       <div class="collapse navbar-collapse" id="navbarColor03">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/player">Player</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Fee</a>
+            <a class="nav-link" href="/fee">Fee</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">About</a>
@@ -41,13 +41,12 @@
       </div>
     </nav>
 
-    <section>
-        <h3>get user</h3>
-        <input type="text" id="uName"/>
-        <input type="submit" id="uSubmit"/>
-
-        <article id="detail"></article>
-        <article id="feeList"></article>
+    <section class="jumbotron">
+        <h1 class="display-6" style="text-align: center;">绿动是冠军！</h1>
+        <hr class="my-4">
+        <p class="lead">
+            <img src="../static/img/champion.jpg" width="100%" height="auto" alt="">
+        </p>
     </section>
 
 </main>
