--- a/script/templates/index.html
+++ b/script/templates/index.html
@@ -26,13 +26,13 @@
       <div class="collapse navbar-collapse" id="navbarColor03">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">首页<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/player">Player</a>
+            <a class="nav-link" href="/player">球员</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/fee">Fee</a>
+            <a class="nav-link" href="/fee">队费</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">About</a>
