--- a/script/templates/player.html
+++ b/script/templates/player.html
@@ -24,13 +24,13 @@
       <div class="collapse navbar-collapse" id="navbarColor03">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/">Home</a>
+            <a class="nav-link" href="/">首页</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#">Player<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">球员<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/fee">Fee</a>
+            <a class="nav-link" href="/fee">队费</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">About</a>
