--- a/script/templates/admin/editplayer.html
+++ b/script/templates/admin/editplayer.html
@@ -27,7 +27,7 @@
             <a class="nav-link" href="/">首页</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="/editplayer">修改球员<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">修改球员<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/editfee">更新队费</a>
