--- a/script/templates/fee.html
+++ b/script/templates/fee.html
@@ -1,45 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>绿动北京足球俱乐部</title>
-    <meta name="author" content="cx9">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"">
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <![endif]-->
-    <!-- Bootstrap CSS (bootswatch) -->
-    <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/spacelab/bootstrap.min.css" rel="stylesheet" integrity="sha384-TgQmpeh1IG9vQ1WxIzpdfm5FX08N4+Nr5uzpgqvZAKQwWems+NIMmOVIMFxGq6EZ" crossorigin="anonymous">
+{% extends 'base.html' %}
+{% set active_page = 'fee' %}
+{% block head %} {% endblock %}
+{% block style %} {% endblock %}
 
-</head>
-</head>
-<body>
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="/">绿动北京足球俱乐部</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarColor03">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="/">首页</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/player">球员</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#">队费<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-
-    <main>
+{% block body %}
         <section class="jumbotron">
             <h1 class="h1" style="text-align: center;">队费信息</h1>
             <form class="form-inline my-2 my-lg-0" action="javascript:get_feeList($('#playerList').val());">
@@ -82,15 +46,9 @@
             </table>
         </section>
 
-    </main>
+{% endblock %}
 
-<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-<!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-
+{% block jscript %}
 
 <script language="JavaScript" type="application/javascript">
 
@@ -151,5 +109,4 @@ function get_feeList(name) {
 }
 
 </script>
-</body>
-</html>
+{% endblock %}
