--- a/script/templates/admin/editfee.html
+++ b/script/templates/admin/editfee.html
@@ -23,7 +23,7 @@
                     </div>
                     <div class="form-group">
                         <label class="col-form-label" for="totalAmount">总金额</label>
-                        <input type="text" class="form-control" required placeholder="" id="totalAmount" name="totalAmount">
+                        <input type="number" class="form-control" required placeholder="" step="0.1" id="totalAmount" name="totalAmount">
                         <p class="text-danger">扣款填复数（-），充值填正数（+）。</p>
                     </div>
                     <div class="form-group">
