--- a/script/templates/admin/editplayer.html
+++ b/script/templates/admin/editplayer.html
@@ -33,8 +33,8 @@
                         <p class="text-danger">号码修改为"0"将球员下放到预备队，例"奥托"。</p>
                     </div>
                     <div class="form-group">
-                        <label for="pos">场上位置</label>
-                            <select multiple="true" class="form-control" required id="pos" name="pos">
+                        <label for="position">场上位置</label>
+                            <select multiple class="form-control" required id="position" name="position">
                             <option value="GK">守门员</option>
                             <option value="CB">中后卫</option>
                             <option value="SB">边后卫</option>
@@ -50,7 +50,7 @@
                             <option value="FW">前锋</option>
                             <option value="WF">边锋</option>
                             <option value="LWF">左边锋</option>
-                            <option value="RWF">左边锋</option>
+                            <option value="RWF">右边锋</option>
                             <option value="CF">中锋</option>
                         </select>
                     </div>
@@ -115,7 +115,7 @@ function get_player(name) {
                 $('#num').val(res_player.num);
 
                 for (var i in res_player.position){
-                    $("#pos option").each(function(){
+                    $("#position option").each(function(){
                         if($(this).val() == res_player.position[i]){
                             $(this).attr("selected",true);
                         }
