add auth control to api

--- a/script/templates/fee.html
+++ b/script/templates/fee.html
@@ -9,7 +9,7 @@
             <form class="form-inline my-2 my-lg-0" action="javascript:get_feeList($('#playerList').val());">
                 <div class="form-group">
                     <select class="custom-select form-control mr-2" style="max-width: 50%;" id="playerList">
-                        <option selected="" value="">请选择</option>
+                        <option selected="" value="">请选择球员</option>
                         <!--<option value="陈譞">陈譞</option>-->
                     </select>
 
