--- a/script/templates/base.html
+++ b/script/templates/base.html
@@ -8,9 +8,12 @@
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <![endif]-->
+    <meta http-equiv="Cache-Control" content="no-siteapp"/>
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/favicon.ico') }}">
+    <link rel="apple-touch-icon-precomposed" href="{{ url_for('static',filename='img/favicon.ico') }}">
     <!-- Bootstrap CSS (bootswatch) -->
     <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/spacelab/bootstrap.min.css" rel="stylesheet" integrity="sha384-TgQmpeh1IG9vQ1WxIzpdfm5FX08N4+Nr5uzpgqvZAKQwWems+NIMmOVIMFxGq6EZ" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="{{ url_for('static',filename='css/base.css') }}">
     {% block head %} {% endblock %}
     {% block style %} {% endblock %}
 
@@ -27,9 +30,10 @@
         {% if current_user.username == 'admin' %}
             {% set navigation = [
                                 ('/', 'index', '首页'),
-                                ('/player', 'player', '球员'),
-                                ('/fee', 'fee', '队费'),
-                                ('/about', 'about', '关于我们'),
+                                ('/player', 'player', '球员信息'),
+                                ('/fee', 'fee', '队费查询'),
+                                ('/', 'video', '精彩视频'),
+                                ('/about', 'about', '球队章程'),
                                 ('/editplayer', 'editplayer', '修改球员'),
                                 ('/editfee', 'editfee', '更新队费'),
                                 ('/auth/logout', 'logout', '退出登录'),
@@ -38,9 +42,10 @@
             {% else %}
             {% set navigation = [
                                 ('/', 'index', '首页'),
-                                ('/player', 'player', '球员'),
-                                ('/fee', 'fee', '队费'),
-                                ('/about', 'about', '关于我们'),
+                                ('/player', 'player', '球员信息'),
+                                ('/fee', 'fee', '队费查询'),
+                                ('/', 'video', '精彩视频'),
+                                ('/about', 'about', '球队章程'),
                                 ('/auth/login', 'login', '管理员登录')
                                 ] -%}
         {% endif%}
@@ -69,8 +74,6 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-
-{% block jscript %} {% endblock %}
-
+    {% block jscript %} {% endblock %}
 </body>
 </html>
