optimize mongodb query

--- a/script/templates/fee.html
+++ b/script/templates/fee.html
@@ -54,13 +54,13 @@
 
 $(function(){
     $.ajax({
-        url: "/api/get_name_list",
+        url: "/api/get_name_num_list",
         type: "GET",
         dataType: "json",
         success: function (data) {
             var res_str = '';
             for (var i in data) {
-                res_str = res_str + '<option value="' + data[i] + '">' + data[i] + '</option>'
+                res_str = res_str + '<option value="' + data[i].name + '">' + data[i].num + '. ' + data[i].name + '</option>'
             }
             $('#playerList').append(res_str);
         },
