--- a/script/templates/admin/editplayer.html
+++ b/script/templates/admin/editplayer.html
@@ -94,13 +94,13 @@
 
 $(function(){
     $.ajax({
-        url: "/api/get_name_list",
+        url: "/api/get_name_num_list",
         type: "GET",
         dataType: "json",
         success: function (data) {
             var res_str = '';
             for (var i in data) {
-                res_str = res_str + '<option value="' + data[i] + '">' + data[i] + '</option>'
+                res_str = res_str + '<option value="' + data[i].name + '">' + data[i].num + '. ' + data[i].name + '</option>'
             }
             $('#playerList').append(res_str);
         },
@@ -119,7 +119,7 @@ function get_player(name) {
             type: "GET",
             dataType: "json",
             success: function (data) {
-                var res_player = data[0];console.log(res_player)
+                var res_player = data[0];
                 $('#name').val(res_player.name);
                 $('#num').val(res_player.num);
 
